# CMPT433

./: LICENSE  README.md
myApps/cmake_lcdstarter/: CMakeLists.txt
myApps/cmake_lcdstarter/app/: CMakeLists.txt
myApps/cmake_lcdstarter/app/include/: btn_statemachine.h  draw_stuff.h  gpio.h
myApps/cmake_lcdstarter/app/src/: btn_statemachine.c  draw_stuff.c  gpio.c  main.c
myApps/cmake_lcdstarter/hal/include/hal/: lightSensor.h
myApps/cmake_lcdstarter/hal/src/: lightSensor.c
myApps/ledStart/: CMakeLists.txt
myApps/ledStart/app/: CMakeLists.txt
myApps/ledStart/app/src/: main.c
myApps/ledStart/hal/include/hal/: led.h
myApps/ledStart/hal/src/: led.c
myApps/quickStart/: helloworld.c  helloworld_host  helloworld_target
myApps/test/: led  led.c  led.h  led_script.c  led_target
